--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -8,11 +8,10 @@
     tools:context="com.github.erikhuizinga.demo.welcome.WelcomeActivity">
 
     <Button
-        android:id="@+id/button_start"
+        android:id="@+id/moria_gate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="mellon"
-        android:text="Speak Friend And Enter"
+        android:text="@string/riddle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
